--- a/TavernaMobile/res/layout/workflowsexpo_single_row.xml
+++ b/TavernaMobile/res/layout/workflowsexpo_single_row.xml
@@ -266,6 +266,27 @@
             android:textColor="@color/Black"
             android:textSize="12sp"
             android:textStyle="bold" />
+
+        <View
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
+            android:background="?android:attr/listDivider" />
+
+        <Button
+            android:id="@+id/wfExpoFavouriteButtom"
+            style="?android:attr/buttonBarButtonStyle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/wfexpo_selector"
+            android:drawableLeft="@drawable/bookmark_icon"
+            android:gravity="center"
+            android:text="favourite"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:textColor="@color/Black"
+            android:textSize="12sp"
+            android:textStyle="bold" />
+
     </LinearLayout>
 
 </LinearLayout>
