--- a/TavernaMobile/res/layout/workflowslist_single_row.xml
+++ b/TavernaMobile/res/layout/workflowslist_single_row.xml
@@ -19,7 +19,7 @@
         android:orientation="horizontal" >
 
         <TextView
-            android:id="@+id/wfExpoUploaderName"
+            android:id="@+id/wfListUploaderName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="left"
@@ -46,7 +46,7 @@
                 android:orientation="horizontal" >
 
                 <TextView
-                    android:id="@+id/wfExpoTitleVersion"
+                    android:id="@+id/wfListTitleVersion"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="top|left"
@@ -70,14 +70,14 @@
                     android:layout_height="wrap_content"
                     android:layout_marginRight="5dp"
                     android:gravity="center_vertical"
-                    android:text="@string/wfexpo_sr_created_on"
+                    android:text="@string/wfList_sr_created_on"
                     android:textAppearance="?android:attr/textAppearanceSmall"
                     android:textColor="@color/Black"
                     android:textSize="12sp"
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/wfExpoCreated"
+                    android:id="@+id/wfListCreated"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="5dp"
@@ -97,14 +97,14 @@
                     android:layout_height="wrap_content"
                     android:layout_marginRight="5dp"
                     android:gravity="center_vertical"
-                    android:text="@string/wfexpo_sr_last_update"
+                    android:text="@string/wfList_sr_last_update"
                     android:textAppearance="?android:attr/textAppearanceSmall"
                     android:textColor="@color/Black"
                     android:textSize="12sp"
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/wfExpoUpdateText"
+                    android:id="@+id/wfListUpdateText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
@@ -117,26 +117,26 @@
                 android:layout_height="wrap_content" >
 
                 <TextView
-                    android:id="@+id/wfExpoSingleRowCreditText"
+                    android:id="@+id/wfListSingleRowCreditText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="5dp"
                     android:gravity="center_vertical"
-                    android:text="@string/wfexpo_sr_credit"
+                    android:text="@string/wfList_sr_credit"
                     android:textAppearance="?android:attr/textAppearanceSmall"
                     android:textColor="@color/Black"
                     android:textSize="12sp"
                     android:textStyle="bold" />
 
                 <LinearLayout
-                    android:id="@+id/wfExpoSingleRowCreditLayout"
+                    android:id="@+id/wfListSingleRowCreditLayout"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:orientation="vertical" >
 
                     <TextView
-                        android:id="@+id/wfExpoCreditText"
+                        android:id="@+id/wfListCreditText"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginRight="5dp"
@@ -156,19 +156,19 @@
                 android:orientation="horizontal" >
 
                 <TextView
-                    android:id="@+id/wfExpoSingleRowRatingText"
+                    android:id="@+id/wfListSingleRowRatingText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="5dp"
                     android:gravity="center_vertical"
-                    android:text="@string/wfexpo_sr_rating"
+                    android:text="@string/wfList_sr_rating"
                     android:textAppearance="?android:attr/textAppearanceSmall"
                     android:textColor="@color/Black"
                     android:textSize="12sp"
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/wfExpoRatingText"
+                    android:id="@+id/wfListRatingText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
@@ -177,11 +177,11 @@
             </LinearLayout>
 
             <ImageView
-                android:id="@+id/wfExpoThumbnail"
+                android:id="@+id/wfListThumbnail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:contentDescription="@string/wfexpo_sr_mediam_wf_thumbnail" />
+                android:contentDescription="@string/wfList_sr_mediam_wf_thumbnail" />
 
             <TextView
                 android:id="@+id/thumbnail_not_available_text"
@@ -210,14 +210,14 @@
                     android:layout_gravity="center_vertical"
                     android:layout_marginRight="5dp"
                     android:gravity="center_vertical"
-                    android:text="@string/wfexpo_sr_type"
+                    android:text="@string/wfList_sr_type"
                     android:textAppearance="?android:attr/textAppearanceSmall"
                     android:textColor="@color/Black"
                     android:textSize="12sp"
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/wfExpoTypeText"
+                    android:id="@+id/wfListTypeText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="left|center_vertical"
@@ -235,14 +235,14 @@
         android:orientation="horizontal" >
 
         <Button
-            android:id="@+id/wfExpo_view_button"
+            android:id="@+id/wfList_view_button"
             style="?android:attr/buttonBarButtonStyle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@drawable/wfexpo_selector"
+            android:background="@drawable/wflist_selector"
             android:gravity="center"
-            android:text="@string/wfexpo_sr_view_button"
+            android:text="@string/wfList_sr_view_button"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textColor="@color/Black"
             android:textSize="12sp"
@@ -254,14 +254,14 @@
             android:background="?android:attr/listDivider" />
 
         <Button
-            android:id="@+id/wfExpo_download_button"
+            android:id="@+id/wfList_download_button"
             style="?android:attr/buttonBarButtonStyle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@drawable/wfexpo_selector"
+            android:background="@drawable/wflist_selector"
             android:gravity="center"
-            android:text="@string/wfexpo_sr_download_button"
+            android:text="@string/wfList_sr_download_button"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textColor="@color/Black"
             android:textSize="12sp"
@@ -273,12 +273,12 @@
             android:background="?android:attr/listDivider" />
 
         <Button
-            android:id="@+id/wfExpoFavouriteButtom"
+            android:id="@+id/wfListFavouriteButtom"
             style="?android:attr/buttonBarButtonStyle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@drawable/wfexpo_selector"
+            android:background="@drawable/wflist_selector"
             android:drawableLeft="@drawable/bookmark_icon"
             android:gravity="center"
             android:text="favourite"
