--- a/TavernaMobile/res/layout/main_panel_content.xml
+++ b/TavernaMobile/res/layout/main_panel_content.xml
@@ -33,6 +33,7 @@
     </android.support.v4.view.ViewPager>
 
     <LinearLayout
+        android:id="@+id/poweredByLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|right" >
