--- a/TavernaMobile/res/layout/main_panel_content.xml
+++ b/TavernaMobile/res/layout/main_panel_content.xml
@@ -4,21 +4,13 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:layout_gravity="center"
-    android:focusable="true"
-    android:focusableInTouchMode="true"
     android:gravity="center" >
 
     <android.support.v4.view.ViewPager
         android:id="@+id/mainViewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/gradient2"
-        tools:context=".MainActivity" >
-
-        <!--
-    This title strip will display the currently visible page title, as well as the page
-    titles for adjacent pages.
-        -->
+        android:background="@drawable/gradient2">
 
         <android.support.v4.view.PagerTitleStrip
             android:id="@+id/pager_title_strip"
@@ -28,7 +20,8 @@
             android:background="@android:color/transparent"
             android:paddingBottom="5dp"
             android:paddingTop="5dp"
-            android:textColor="#fff" >
+            android:textColor="#fff"
+            android:textStyle="bold|italic" >
         </android.support.v4.view.PagerTitleStrip>
     </android.support.v4.view.ViewPager>
 
