--- a/TavernaMobile/res/anim/push_up_in.xml
+++ b/TavernaMobile/res/anim/push_up_in.xml
@@ -1,5 +1,5 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android">
-   <translate android:fromYDelta="100%p" android:toYDelta="0" 
+   <translate android:fromYDelta="0" android:toYDelta="-100%p" 
           android:duration="500"/>
    <alpha android:fromAlpha="0.0" android:toAlpha="1.0" 
           android:duration="500" />
