--- a/TavernaMobile/res/layout/main_runs.xml
+++ b/TavernaMobile/res/layout/main_runs.xml
@@ -2,13 +2,29 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent" 
+    android:orientation="vertical">
+    
+    <TextView
+        android:id="@+id/runsList_bar_text"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_gravity="left"
+        android:background="@drawable/top_bg"
+        android:gravity="center"
+        android:padding="10dp"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="@color/Gray"
+        android:textSize="15sp"
+        android:textStyle="italic"
+        android:visibility="visible" />
 
     <com.handmark.pulltorefresh.library.PullToRefreshExpandableListView
         android:id="@+id/pull_to_refresh_listview"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
+        android:layout_below="@+id/runsList_bar_text"
         android:layout_centerHorizontal="true"
         android:focusable="false"
         android:focusableInTouchMode="false" />
