--- a/TavernaMobile/res/layout/main_workflows.xml
+++ b/TavernaMobile/res/layout/main_workflows.xml
@@ -1,52 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:background="@drawable/gradient2"
-    android:gravity="fill_vertical"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <LinearLayout
-        android:id="@+id/savedWorkflowListRoot"
-        android:layout_width="match_parent"
-        android:layout_height="fill_parent"
+    <TextView
+        android:id="@+id/fragWfDesc"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
+        android:layout_gravity="left"
+        android:background="@drawable/top_bg"
+        android:gravity="center"
+        android:padding="10dp"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="@color/Gray"
+        android:textSize="15sp"
+        android:textStyle="italic"
+        android:visibility="visible" />
+
+    <ListView
+        android:id="@+id/savedWorkflowList"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/fragWfDesc"
         android:layout_gravity="top"
-        android:orientation="vertical"
-        android:visibility="gone" >
-
-        <TextView
-            android:id="@+id/fragWfDesc"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="left|center_vertical"
-            android:background="@drawable/top_bg"
-            android:padding="20dp"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textStyle="bold|italic" />
-
-        <ListView
-            android:id="@+id/savedWorkflowList"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="top"
-            android:layout_marginBottom="20dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:divider="@android:color/transparent"
-            android:dividerHeight="10dp" >
-
-        </ListView>
-    </LinearLayout>
+        android:layout_marginBottom="20dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="10dp" 
+        android:visibility="gone">
+    </ListView>
 
     <TextView
         android:id="@+id/workflow_frag_default_textview"
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_alignParentTop="true"
-        android:layout_gravity="center"
+        android:layout_below="@+id/fragWfDesc"
+        android:layout_centerInParent="true"
         android:gravity="center"
         android:text="@string/Workflow_frag_default_message"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="@color/DarkGray"
+        android:textStyle="bold|italic" />
 
 </RelativeLayout>
