--- a/TavernaMobile/res/layout/dialog_layout_neutral.xml
+++ b/TavernaMobile/res/layout/dialog_layout_neutral.xml
@@ -14,10 +14,8 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_weight="3"
-        android:text="Medium Text"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="@color/Black"
-        android:textSize="15sp" />
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textColor="@color/Black"/>
 
     <Button
         android:id="@+id/neutraldialog_dismiss_button"
