--- a/TavernaMobile/res/layout/dialog_layout_two_options.xml
+++ b/TavernaMobile/res/layout/dialog_layout_two_options.xml
@@ -14,17 +14,17 @@
         android:layout_centerHorizontal="true"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:text="Medium Text"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="@color/Black"
-        android:textSize="15sp" />
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textColor="@color/Black"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/twooptionsdialog_message"
         android:layout_centerHorizontal="true"
-        android:layout_margin="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="50dp"
         android:gravity="center" >
 
         <Button
