Run list action mode fix + output list update + many more...

--- a/TavernaMobile/res/layout/dialog_layout_two_options.xml
+++ b/TavernaMobile/res/layout/dialog_layout_two_options.xml
@@ -1,41 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:gravity="center"
-    android:minWidth="200dip" >
+    android:minWidth="200dip"
+    android:orientation="vertical" >
 
     <TextView
         android:id="@+id/twooptionsdialog_message"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
+        android:layout_height="0dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
+        android:layout_weight="3"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:textColor="@color/Black"/>
+        android:textColor="@color/Black" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="50dp"
+        android:layout_height="0dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_margin="10dp"
+        android:layout_weight="1"
         android:gravity="center" >
 
         <Button
             android:id="@+id/twooptionsdialog_option1_button"
             style="?android:attr/buttonBarButtonStyle"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_marginRight="10dp"
-            android:layout_weight="1"
             android:background="@drawable/dialog_bottom_selector"
-            android:minHeight="45dp"
+            android:minHeight="40dp"
+            android:minWidth="110dp"
             android:paddingLeft="35dp"
             android:paddingRight="35dp"
             android:text="@string/dialog_button_option1_default_text"
@@ -44,11 +43,12 @@
         <Button
             android:id="@+id/twooptionsdialog_option2_button"
             style="?android:attr/buttonBarButtonStyle"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_gravity="center"
             android:background="@drawable/dialog_bottom_selector"
-            android:minHeight="45dp"
+            android:minHeight="40dp"
+            android:minWidth="110dp"
             android:paddingLeft="35dp"
             android:paddingRight="35dp"
             android:text="@string/dialog_button_option2_default_text"
@@ -56,4 +56,4 @@
 
     </LinearLayout>
 
-</RelativeLayout>
+</LinearLayout>
