--- a/TavernaMobile/res/layout/dialog_layout_two_options.xml
+++ b/TavernaMobile/res/layout/dialog_layout_two_options.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:gravity="center"
@@ -11,9 +11,9 @@
         android:id="@+id/twooptionsdialog_message"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
         android:layout_weight="3"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textColor="@color/Black" />
 
@@ -21,7 +21,10 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_gravity="center_horizontal"
-        android:layout_margin="10dp"
+        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
         android:layout_weight="1"
         android:gravity="center" >
 
