Run list action mode fix + dropbox authentication + view holder + many more...

--- a/TavernaMobile/res/layout/outputs_tree.xml
+++ b/TavernaMobile/res/layout/outputs_tree.xml
@@ -21,8 +21,9 @@
         android:id="@+id/outputsTopNoticeText"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:padding="5dp"
+        android:layout_gravity="center"
+        android:gravity="left"
+        android:padding="10dp"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="@color/Gray"
         android:textSize="15sp"
