--- a/TavernaMobile/res/layout/run_monitor_screen.xml
+++ b/TavernaMobile/res/layout/run_monitor_screen.xml
@@ -10,7 +10,8 @@
         android:id="@+id/monitorWfTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_gravity="center"
+        android:padding="20dp"
         android:text="Runing (workflow)"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
