adding dropbox link

--- a/TavernaMobile/res/layout/inputs_single_row.xml
+++ b/TavernaMobile/res/layout/inputs_single_row.xml
@@ -5,6 +5,7 @@
     android:layout_height="fill_parent"
     android:background="#1E90FF"
     android:orientation="vertical" >
+
     <TextView
         android:id="@+id/inputName"
         android:layout_width="wrap_content"
@@ -14,58 +15,91 @@
         android:text="Input Name"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="#FFFFFF" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:background="#A0E0FFFF"
         android:orientation="vertical" >
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >
+
             <TextView
                 android:id="@+id/inputValue"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:layout_weight="1"
+                android:layout_marginRight="10dp"
                 android:text="Input Value: "
                 android:textAppearance="?android:attr/textAppearanceSmall" />
+
             <EditText
                 android:id="@+id/inputValueText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_marginRight="10dp"
                 android:ems="10"
                 android:inputType="textMultiLine" />
+
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center" >
+            android:layout_gravity="center"
+            android:orientation="horizontal" >
 
             <TextView
-                android:id="@+id/inputValue"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginLeft="10dp"
-                android:layout_weight="1"
+                android:layout_marginRight="10dp"
                 android:gravity="center"
-                android:text="Or :"
+                android:text="Or select from:"
                 android:textAppearance="?android:attr/textAppearanceSmall" />
 
-            <Button
-                android:id="@+id/fileSelectButton"
-                android:layout_width="0dp"
+            <LinearLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_weight="2"
-                android:minHeight="38dp"
-                android:minWidth="44dp"
-                android:text="Choose Input File"
-                android:textSize="15sp" />
+                android:layout_gravity="right"
+                android:layout_marginRight="10dp"
+                android:orientation="horizontal" >
 
+                <ImageButton
+                    android:id="@+id/fileSelectButton"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="2"
+                    android:minHeight="38dp"
+                    android:minWidth="44dp"
+                    android:src="@drawable/folder_icon"
+                    android:textSize="15sp" />
+
+                <ImageButton
+                    android:id="@+id/dropboxFileSelButton"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:minHeight="48dp"
+                    android:minWidth="44dp"
+                    android:src="@drawable/dropbox_icon"
+                    android:textSize="15sp" />
+
+                <ImageButton
+                    android:id="@+id/googleDriveFileSelButton"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:minHeight="38dp"
+                    android:minWidth="44dp"
+                    android:src="@drawable/google_drive_icon"
+                    android:textSize="15sp" />
+            </LinearLayout>
         </LinearLayout>
 
         <LinearLayout
@@ -81,9 +115,7 @@
                 android:layout_height="wrap_content"
                 android:padding="5dp"
                 android:text="No File Chosen" />
-
         </LinearLayout>
-
     </LinearLayout>
     <!--
     <android.support.v4.view.ViewPager
@@ -101,4 +133,5 @@
         </android.support.v4.view.PagerTabStrip>
     </android.support.v4.view.ViewPager>
     -->
+
 </LinearLayout>
