--- a/TavernaMobile/res/layout/run_monitor_screen.xml
+++ b/TavernaMobile/res/layout/run_monitor_screen.xml
@@ -18,7 +18,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp" >
+        android:layout_margin="20dp"
+        android:visibility="gone" >
 
         <TextView
             android:id="@+id/monitorUsername"
