--- a/TavernaMobile/res/layout/workflowslist_single_row.xml
+++ b/TavernaMobile/res/layout/workflowslist_single_row.xml
@@ -144,7 +144,6 @@
                         android:textColor="@color/Black"
                         android:textSize="12sp"
                         android:visibility="gone" />
-
                 </LinearLayout>
             </LinearLayout>
 
@@ -242,6 +241,8 @@
             android:layout_weight="1"
             android:background="@drawable/wflist_selector"
             android:gravity="center"
+            android:maxHeight="40dp"
+            android:minHeight="40dp"
             android:text="@string/wfList_sr_view_button"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textColor="@color/Black"
@@ -261,6 +262,8 @@
             android:layout_weight="1"
             android:background="@drawable/wflist_selector"
             android:gravity="center"
+            android:maxHeight="40dp"
+            android:minHeight="40dp"
             android:text="@string/wfList_sr_download_button"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textColor="@color/Black"
@@ -279,14 +282,14 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@drawable/wflist_selector"
-            android:drawableLeft="@drawable/bookmark_icon"
             android:gravity="center"
+            android:maxHeight="40dp"
+            android:minHeight="40dp"
             android:text="favourite"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textColor="@color/Black"
             android:textSize="12sp"
             android:textStyle="bold" />
-
     </LinearLayout>
 
 </LinearLayout>
