--- a/TavernaMobile/res/layout/outputs_tree.xml
+++ b/TavernaMobile/res/layout/outputs_tree.xml
@@ -22,8 +22,8 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_margin="10dp"
         android:gravity="left"
-        android:padding="10dp"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="@color/Gray"
         android:textSize="15sp"
